Add manual deployment support and free standard ports
- Updated backend to use port 8080 (default for Spring Boot)
- Updated frontend to use port 3000 (default for React)
- Added comprehensive manual deployment guide (MANUAL_DEPLOYMENT.md)
- Updated CORS configuration to support both local and cloud deployment
- Created development and production environment files
- Updated all documentation to reflect standard ports
- Enhanced deployment script with manual deployment info

🚀 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>